--- a/q/86075.html
+++ b/q/86075.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>026</td><td>+Output</td><td>240621T014622Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273728#273728">Evylah</a></td></tr>
-<tr d-ix="1"><td>005</td><td>Uiua</td><td>240621T152802Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273736#273736">Europe20</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Casio BASIC fx9750giii</td><td>240910T143653Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275463#275463">madeforl</a></td></tr>
+<tr d-ix="1"><td>026</td><td>+Output</td><td>240621T014622Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273728#273728">Evylah</a></td></tr>
 <tr d-ix="2"><td>007</td><td>Uiua</td><td>240620T141901Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273723#273723">Joonas</a></td></tr>
 <tr d-ix="3"><td>020</td><td>Brainfuck+2</td><td>240511T113548Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273064#273064">None1</a></td></tr>
 <tr d-ix="4"><td>026</td><td>TI84 BASIC</td><td>240509T151456Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273037#273037">madeforl</a></td></tr>
@@ -62,7 +62,7 @@
 <tr d-ix="33"><td>014</td><td>Julia 1.7</td><td>220217T035009Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/242931#242931">David Sc</a></td></tr>
 <tr d-ix="34"><td>050</td><td>Headascii</td><td>220217T021022Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/242925#242925">thejonym</a></td></tr>
 <tr d-ix="35"><td>067</td><td>dotcomma</td><td>201002T110558Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/211938#211938">Dorian</a></td></tr>
-<tr d-ix="36"><td>067</td><td>dotcomma</td><td>210413T163346Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/223403#223403">Rydwolf </a></td></tr>
+<tr d-ix="36"><td>067</td><td>dotcomma</td><td>210413T163346Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/223403#223403">rydwolf</a></td></tr>
 <tr d-ix="37"><td>002</td><td>Japt</td><td>210715T100312Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/231406#231406">Shaggy</a></td></tr>
 <tr d-ix="38"><td>016</td><td>Knight</td><td>210524T031434Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/226195#226195">EasyasPi</a></td></tr>
 <tr d-ix="39"><td>015</td><td>Factor</td><td>210426T213121Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/224475#224475">chunes</a></td></tr>
@@ -92,11 +92,11 @@
 <tr d-ix="63"><td>163</td><td>Poetic</td><td>191118T113044Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/196027#196027">JosiahRy</a></td></tr>
 <tr d-ix="64"><td>054</td><td>Hexadecimal Stacking PseudoAssembly Language</td><td>191118T091827Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/196025#196025">Dorian</a></td></tr>
 <tr d-ix="65"><td>034</td><td>PHP with goto</td><td>170622T104052Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/127841#127841">Shaun Be</a></td></tr>
-<tr d-ix="66"><td>013</td><td>Perl 5</td><td>190920T203007Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/193257#193257">booshlin</a></td></tr>
+<tr d-ix="66"><td>013</td><td>Perl 5</td><td>190920T203007Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/193257#193257">rpGYNay0</a></td></tr>
 <tr d-ix="67"><td>002</td><td>Putt</td><td>190919T001928Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/193135#193135">ajmwagar</a></td></tr>
 <tr d-ix="68"><td>199</td><td>Turing Machine Language</td><td>190918T140508Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/193095#193095">ouflak</a></td></tr>
 <tr d-ix="69"><td>025</td><td>MarioLANG</td><td>190916T080527Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/192898#192898">Dorian</a></td></tr>
-<tr d-ix="70"><td>012</td><td>Clojure REPL</td><td>190917T051003Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/192946#192946">Ampersan</a></td></tr>
+<tr d-ix="70"><td>012</td><td>Clojure REPL</td><td>190917T051003Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/192946#192946">Lucky</a></td></tr>
 <tr d-ix="71"><td>005</td><td>Keg</td><td>190916T234219Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/192942#192942">user8505</a></td></tr>
 <tr d-ix="72"><td>015</td><td>ROOP</td><td>160723T042514Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86370#86370">DarkPhan</a></td></tr>
 <tr d-ix="73"><td>017</td><td>Brian & Chuck</td><td>190916T074118Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/192894#192894">Dorian</a></td></tr>
@@ -230,7 +230,7 @@
 <tr d-ix="201"><td>031</td><td>JavaScript</td><td>160723T151451Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86405#86405">Davis</a></td></tr>
 <tr d-ix="202"><td>017</td><td>MoonScript</td><td>160723T134844Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86402#86402">manatwor</a></td></tr>
 <tr d-ix="203"><td>019</td><td>CoffeeScript</td><td>160723T123914Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86398#86398">manatwor</a></td></tr>
-<tr d-ix="204"><td>005</td><td>GolfScript</td><td>160723T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86392#86392">CocoaBea</a></td></tr>
+<tr d-ix="204"><td>005</td><td>GolfScript</td><td>160723T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86392#86392">Rocko</a></td></tr>
 <tr d-ix="205"><td>018</td><td>Elixir</td><td>160723T104546Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86391#86391">David Co</a></td></tr>
 <tr d-ix="206"><td>005</td><td>Kona</td><td>160722T222621Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86359#86359">Aearnus</a></td></tr>
 <tr d-ix="207"><td>030</td><td>JavaScript</td><td>160722T155211Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86316#86316">Titus</a></td></tr>
@@ -268,7 +268,7 @@
 <tr d-ix="239"><td>058</td><td>Brainfuck</td><td>160721T093545Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86099#86099">xenia</a></td></tr>
 <tr d-ix="240"><td>037</td><td>ListSharp</td><td>160721T161036Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86148#86148">downrep_</a></td></tr>
 <tr d-ix="241"><td>005</td><td>Sesos binary</td><td>160721T131938Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86118#86118">Leaky Nu</a></td></tr>
-<tr d-ix="242"><td>029</td><td>Common Lisp</td><td>160721T144022Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86139#86139">CocoaBea</a></td></tr>
+<tr d-ix="242"><td>029</td><td>Common Lisp</td><td>160721T144022Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86139#86139">Rocko</a></td></tr>
 <tr d-ix="243"><td>002</td><td>Pyke</td><td>160721T143106Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86136#86136">Blue</a></td></tr>
 <tr d-ix="244"><td>004</td><td>MATLAB/Octave</td><td>160721T143029Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86135#86135">costrom</a></td></tr>
 <tr d-ix="245"><td>066</td><td>Brainfuck</td><td>160721T142848Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86133#86133">Katenkyo</a></td></tr>
@@ -300,7 +300,14 @@
 <tr d-ix="271"><td>036</td><td>C</td><td>160721T092341Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86091#86091">xsot</a></td></tr>
 <tr d-ix="272"><td>002</td><td>Jelly</td><td>160721T091553Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86082#86082">TuxCraft</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/%2BOutput" rel="nofollow noreferrer">+Output</a>, 26 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://support.casio.com/storage/en/manual/pdf/EN/004/fx-9860GIII_Soft_v340_EN.pdf" rel="nofollow noreferrer">Casio BASIC (fx-9750giii)</a>, 16 bytes</h1>
+<pre><code>For 0→A To 10
+A◢
+Next
+</code></pre>
+<p>you will need to press [EXE] to print the numbers due to how casio basic works</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/%2BOutput" rel="nofollow noreferrer">+Output</a>, 26 bytes</h1>
 <p>Decently bearable answer.</p>
 <pre><code>1U:loaUo1U+:l:oa=#X_aUo70j
 </code></pre>
@@ -314,10 +321,6 @@ This answer abuses the <code>l</code> command, which pushes the length of a stri
                     aUo70j Print newline and start another iteration
 </code></pre>
 <p>Edit: I know it's not the best answer and could be optimized, but I went for a more creative solution</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/pad" rel="nofollow noreferrer">Uiua</a>, 5 bytes, 3 characters</h1>
-<pre><code>⇡10
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 7 bytes, 5 characters</h1>
 <pre><code>+1⇡10
@@ -620,7 +623,7 @@ _  % Output representation of stack (1 2 3 4 5..)
 <p>Cannot be any simpler than this.</p>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWWzQM9fQMDTT1UhOTM6prMmsKFDJrIVJQFTCVAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu29" class="pu"><h1><a href="https://github.com/zackradisic/aussieplusplus/" rel="nofollow noreferrer">Aussie++</a>, output to STDERR, <s>29</s> 28 bytes</h1>
+<div id="pu29" class="pu"><h1><a href="https://github.com/zackradisic/aussieplusplus/" rel="noreferrer">Aussie++</a>, output to STDERR, <s>29</s> 28 bytes</h1>
 <p>It turns out that causing errors is shorter than any straightforward way of doing it.</p>
 <pre><code>G'DAY MATE! 1 2
 
