--- a/q/132981.html
+++ b/q/132981.html
@@ -105,28 +105,17 @@
 </ul>
 <h2>String Operations</h2>
 <ul>
-<li><code>MOVSB</code>/<code>MOVSD</code>: Move byte/dword from address ESI to EDI, then inc/dec both registers based on DF. (<code>MOVSW</code> takes 2 bytes.)
-<ul>
-<li>In 64-bit mode, same as above and <code>MOVSQ</code> uses two bytes.</li>
-</ul>
-</li>
-<li><code>LODSB</code>/<code>LODSD</code>: Load byte/dword from address ESI into AL/EAX, and inc/dec ESI based on DF direction flag. This is very useful in iterating over strings/arrays. (<code>LODSW</code> takes 2 bytes.)
-<ul>
-<li>In 64-bit mode, defaults to 64-bit operands. <code>LODSQ</code> takes 2 bytes.</li>
-</ul>
-</li>
-<li><code>STOSB</code>/<code>STOSD</code>: Store byte/dword from AL/EAX into address EDI, then inc/dec EDI based on DF. (<code>STOSW</code> takes 2 bytes).
-<ul>
-<li>In 64-bit mode,  defaults to 64-bit operands. <code>STOSQ</code> takes 2 bytes.</li>
-</ul>
-</li>
+<li><code>MOVSB</code>/<code>MOVSD</code>: Move byte/dword from address ESI to EDI, then inc/dec both registers based on DF.</li>
+<li><code>LODSB</code>/<code>LODSD</code>: Load byte/dword from address ESI into AL/EAX, and inc/dec ESI based on DF direction flag. This is very useful in iterating over strings/arrays.</li>
+<li><code>STOSB</code>/<code>STOSD</code>: Store byte/dword from AL/EAX into address EDI, then inc/dec EDI based on DF.</li>
 <li><code>CMPSB</code>/<code>CMPSD</code>: Compare byte/dword in address ESI with byte/dword in address EDI, set flags according to result, and inc/dec registers.</li>
 <li><code>SCASB</code>/<code>SCASD</code>: Compare AL/EAX with byte/dword at EDI, set flags according to result, and inc/dec EDI.</li>
 </ul>
+<p>Word (16-bit) versions of the instructions take 2 bytes. In 64-bit mode, defaults to 64-bit operands, and qword versions also take 2 bytes.</p>
 <h2>Opcode Prefixes (technically one byte)</h2>
 <ul>
-<li><code>REP</code>: Repeat the following string instruction, decrementing counter ECX until ECX = 0. REP can prefix MOVS, LODS, and STOS.</li>
-<li><code>REPZ</code>/<code>REPNZ</code>: Repeat the following string instruction, decrementing ECX, terminating when ECX = 0 OR termination condition (ZF = 0 / ZF = 1). Can prefix  <code>CMPS</code> and <code>SCAS</code>.</li>
+<li><code>REP</code>: Repeat the following string instruction, decrementing counter ECX until ECX = 0. REP can only prefix <code>MOVS</code>, <code>LODS</code>, and <code>STOS</code>.</li>
+<li><code>REPZ</code>/<code>REPNZ</code>: Repeat the following string instruction, decrementing ECX, terminating when ECX = 0 OR termination condition (ZF = 0 / ZF = 1). Can only prefix  <code>CMPS</code> and <code>SCAS</code>.</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.felixcloutier.com/x86/loop:loopcc" rel="nofollow noreferrer"><code>LOOP</code></a> according to ECX</h1>
