--- a/q/275413.html
+++ b/q/275413.html
@@ -31,7 +31,7 @@
 <tr d-ix="2"><td>2222</td><td>C++ gcc</td><td>240909T133454Z</td><td><a href="https://codegolf.stackexchange.com/questions/275413/p%c3%b3lya-trees-counted-efficiently/275434#275434">jdt</a></td></tr>
 <tr d-ix="3"><td>061</td><td>Charcoal</td><td>240908T232023Z</td><td><a href="https://codegolf.stackexchange.com/questions/275413/p%c3%b3lya-trees-counted-efficiently/275424#275424">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8+</a>, <s> ~ 8.3 - 11.5 </s> ~ 8.8 - 10.3</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8+</a>, <s> ~ 8.3 - 11.5 </s> ~ 6.8 - 10.9</h1>
 <p>Thanks to <a href="https://codegolf.stackexchange.com/users/95116/gsitcia">gsitcia</a> for improving speed by extracting a memoised weighted tree count function and for providing a nice timing framework.</p>
 <pre class="lang-python prettyprint-override"><code>import functools
 
@@ -74,7 +74,7 @@ ratios=[8.368777843440359, 8.996354403223918, 9.304374924721822, 9.3808793932370
 average_of_non_outlier_ratios=9.648294582506097
 </code></pre>
 <p>Each <code>ratio</code> in <code>ratios</code> is the minimum time across ten trials at size <span class="math-container">\$128\$</span> divided by the minimum time across ten trials at size <span class="math-container">\$64\$</span>. Each run of trials stops when it does not appear that the next trial will finish within <span class="math-container">\$59\$</span> seconds of starting the run. The average of the ratios after discarding the minimum and maximum (<code>average_of_non_outlier_ratios</code>) is then displayed.</p>
-<p>Yes, there is quite a large variance, and it seems quite machine-dependent too (<a href="https://codegolf.stackexchange.com/users/95116/gsitcia">gsitcia</a> reporting ~ 6.8 - 10.9 locally).</p>
+<p>Yes, there is quite a large variance in the results, I'm not sure how to better measure this.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Maple_(software)" rel="nofollow noreferrer">Maple</a>, 161 bytes, ~9.8</h1>
 <p>Uncompressed:</p>
