--- a/q/275413.html
+++ b/q/275413.html
@@ -74,7 +74,7 @@ ratios=[8.368777843440359, 8.996354403223918, 9.304374924721822, 9.3808793932370
 average_of_non_outlier_ratios=9.648294582506097
 </code></pre>
 <p>Each <code>ratio</code> in <code>ratios</code> is the minimum time across ten trials at size <span class="math-container">\$128\$</span> divided by the minimum time across ten trials at size <span class="math-container">\$64\$</span>. Each run of trials stops when it does not appear that the next trial will finish within <span class="math-container">\$59\$</span> seconds of starting the run. The average of the ratios after discarding the minimum and maximum (<code>average_of_non_outlier_ratios</code>) is then displayed.</p>
-<p>Yes, there is quite a large variance in the results, I'm not sure how to better measure this.</p>
+<p>Yes, there is quite a large variance in the results, I'm not sure how to better measure this, but it looks like it's roughly <span class="math-container">\$8=2^3\$</span>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Maple_(software)" rel="nofollow noreferrer">Maple</a>, 161 bytes, ~9.8</h1>
 <p>Uncompressed:</p>
