--- a/q/255650.html
+++ b/q/255650.html
@@ -92,7 +92,7 @@
 </table>
 <div id="pu0" class="pu"><h1>x86, 24 bytes</h1>
 <p>Since the question counts the digits left-to-right, this routine pushes digits from right-to-left onto the stack, then accumulates the sum as it pops digits left-to-right. Using the stack is efficient as <a href="https://codegolf.stackexchange.com/a/275437/17360"><code>push</code>/<code>pop</code> are both one byte</a>. Input and output in eax, and all other registers used are clobbered. Input is assumed to be a positive integer less than 2^31 as specified vaguely in the question: &quot;smaller than a 32-bit integer&quot; (as well as test cases).</p>
-<p>The code ends up being decently short because <code>div</code> conveniently computes the quotient and remainder in one instruction, and the quotient ends in the accumulator eax, the same register as the (lower half) dividend for the next iteration. The same eax which is zero after all digits are pushed then becomes the sum. The digit counter is naturally ecx, which lets me use the ol' <code>loop</code> to save another byte. Also pleasingly, every instruction ends up being two bytes or less. It may be shorter to keep track of parity rather than repeating the pop and branch twice.</p>
+<p>The code ends up being decently short because <code>div</code> conveniently computes the quotient and remainder in one instruction, and the quotient ends in the accumulator eax, the same register as the (lower half) dividend for the next iteration. The same eax which is zero after all digits are pushed then becomes the sum. The digit counter is naturally ecx, which lets me use the ol' <code>loop</code> to save another byte. Also pleasingly, every instruction ends up being two bytes or less.</p>
 <pre><code>sumdig2:                        ; input n in eax
   31 C9     xor     ecx, ecx    ; i = 0
   6A 0A     push    10     
@@ -116,6 +116,15 @@
 
 .done:
   C3        ret                 ; output in eax
+</code></pre>
+<p>It doesn't seem to be shorter to keep track of digit count parity and conditionally add, rather than &quot;unrolling&quot; and having an extra break condition. Even with my idea to reuse edi, starting at a known positive value, and <code>neg</code> (2 bytes) to flip sign, it's still the same byte count.</p>
+<pre><code>.pops:
+  5A        pop     edx         ; pop digit
+  F7 DF     neg     edi         ; flip sign
+  78 02     js     .nosum       
+  01 D0     add     eax, edx    ; sum += popped digit
+.nosum:
+  E2 F7     loop    .pops       ; --i; loop if i != 0
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, <s>13</s> 12 bytes</h1>
