--- a/q/93651.html
+++ b/q/93651.html
@@ -26,26 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>172</td><td>Wolfram Language Mathematica</td><td>201009T043254Z</td><td><a href="https://codegolf.stackexchange.com/questions/93651/expand-the-variadic-expression/212205#212205">att</a></td></tr>
+<tr d-ix="0"><td>170</td><td>Wolfram Language Mathematica</td><td>201009T043254Z</td><td><a href="https://codegolf.stackexchange.com/questions/93651/expand-the-variadic-expression/212205#212205">att</a></td></tr>
 <tr d-ix="1"><td>567</td><td>Python 3</td><td>201008T153826Z</td><td><a href="https://codegolf.stackexchange.com/questions/93651/expand-the-variadic-expression/212186#212186">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>267</s> <s>246</s> <s>190</s> 172 bytes</h1>
-<pre><code>R[ToString[&quot;&quot;@ToExpression@R[#2,{&quot;(&quot;-&gt;&quot;~In~##&amp;[&quot;,&quot;)&quot;-&gt;&quot;]&quot;,a:(WordCharacter|&quot;_&quot;)..:&gt;&quot;\&quot;&quot;&lt;&gt;a&lt;&gt;&quot;\&quot;&quot;}]/.#/.$...[[0]]|List-&gt;(##&amp;)/.In-&gt;(#@##2&amp;),CForm],&quot;\&quot;&quot;-&gt;&quot;&quot;]&amp;
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>267</s> <s>246</s> <s>190</s> <s>172</s> 170 bytes</h1>
+<pre><code>R[ToString[&quot;&quot;@ToExpression@R[#,{&quot;(&quot;-&gt;&quot;~In~##&amp;[&quot;,&quot;)&quot;-&gt;&quot;]&quot;,a:(WordCharacter|&quot;_&quot;)..:&gt;q&lt;&gt;a&lt;&gt;q}]/.#2/.$...[[0]]|List-&gt;(##&amp;)/.In-&gt;(#@##2&amp;),CForm],q-&gt;&quot;&quot;]&amp;
 R=StringReplace
+q=&quot;\&quot;&quot;
 </code></pre>
-<p><a href="https://tio.run/##rZPdaoNAEIXv8xQyFlEwRr0MidhIA4FSWhPoxXYJi9FEMBp0AwV/Xt3uahqS2pTSeiHuzjDfnDM6e0J3/p7Q0CN1MK1dtEqWNA3jLQKwV8nD@yH1syxMYttFoqnmIMPQgmoRV6IoIVBB4XcMKhnLr0m6cXYkJR710wLWoGja2II3gIlFJs2hxCNNHGl3mqYhpGNcPIYZHVoygykjbRHzoy2KpqSozjxJ91jlVawDYGngTltprn@IiOfXL8fQp/YzC1EkImRiPLTO8gPbFtVFfDjShoOlaumRuMoH@aQAkm4znWFzuNehVAeCIDQxs4nNdObrOmHwRFlYLNIWMwM83wvM6AsWyE1E6ZnHcEpPPEdXhc/5tSfzplpGMjqktsXM6PZ2eMJhiUvtp3bG73pdfF@m9K/CLilNWg6U/7GCtex9S@gUfrFyGgIf9g9/xpwtbJKGJGK1fB/Zi62YT6i/eTpG0bWjG064Xj7/rn39rEE5PVAOyvoD" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<p>Input <code>[packs, expr]</code>.</p>
-<p>There unfortunately seems to be no straightforward way to <a href="https://reference.wolfram.com/language/ref/Thread.html" rel="nofollow noreferrer"><code>Thread</code></a> over heads.</p>
-<pre><code>ToExpression@R[#2,{                     parse input:
- &quot;(&quot;-&gt;&quot;~In~##&amp;[&quot;,&quot;)&quot;-&gt;&quot;]&quot;,                convert f(args...) to In[f,args...]
- a:(WordCharacter|&quot;_&quot;)..:&gt;&quot;\&quot;&quot;&lt;&gt;a&lt;&gt;&quot;\&quot;&quot;   convert symbols to strings
+<p><a href="https://tio.run/##rZPBaoNAEIbvPoWMRVwwRnMMidhIA4FSWhvowUpYjCaC0agbKKh5dTtqEhpMW2g9iLszzjf/v@vsKNt6O8oCl1b@tLLsZfzK0iDa2ADGMn742KdelgVxZFi2IOcgwUCH4yI6CoJogwyk3jsg07H0Fqdrc0tT6jIvLWAFRFHGejLR6URPSmeoCKOhcqcoim2rjlM8Bhkb6BJyyFBZRPXSEISRSGRzHqc7R06QDI7IWdNWkeXtQ@p6XDKFd4Dq5RB4zHjGDLOFge5jsSMahpFzOdB0k6nYCWSOnxTtFoXmcK9CiTGeb2KjJjZT0cd1QqsTZaFjqIVpfcF8qQmRnnmIIz3xTFXmz@fXrkY9qz010H6hI0nrkNoWM63b26wTJia@XJuKbn7GX33cdJF88kdFZ5Mryf0nQbpcwLd/Swdy29JNIXMc0TgNaIgV9RjiC4fLo8xbPx3C8MapqBdF5PR03dUe6itoyrmy@gQ" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p>Input <code>[&quot;expr&quot;, packs]</code>. <code>packs</code> can be in any format accepted by <a href="https://reference.wolfram.com/language/ref/ReplaceAll.html" rel="nofollow noreferrer"><code>ReplaceAll</code></a>.</p>
+<p>There unfortunately seems to be no straightforward way to simultaneously expand heads (<a href="https://reference.wolfram.com/language/ref/Through.html" rel="nofollow noreferrer"><code>Through</code></a>, <a href="https://reference.wolfram.com/language/ref/Comap.html" rel="nofollow noreferrer"><code>Comap</code></a><sup>14.0+</sup>) and arguments (<a href="https://reference.wolfram.com/language/ref/Thread.html" rel="nofollow noreferrer"><code>Thread</code></a>).</p>
+<pre><code>R=StringReplace;q=&quot;\&quot;&quot;
+ToExpression@R[#,{                  parse input:
+ &quot;(&quot;-&gt;&quot;~In~##&amp;[&quot;,&quot;)&quot;-&gt;&quot;]&quot;,            convert f(args...) to In[f,args...]
+ a:(WordCharacter|&quot;_&quot;)..:&gt;q&lt;&gt;a&lt;&gt;q     convert symbols to strings
 }]
-&quot;&quot;@ %                                   wrap in &quot;&quot;
-  /.#                                     insert packs
-  /.$...[[0]]|List-&gt;(##&amp;)                 expand packs
-  /.In-&gt;(#@##2&amp;)                          convert In[f,args...] to f[args...]
-ToString[ % ,CForm]                     stringify
-R[ % ,&quot;\&quot;&quot;-&gt;&quot;&quot;]                         unquote names
+&quot;&quot;@ %                               wrap in &quot;&quot;
+  /.#2                                insert packs
+  /.$...[[0]]|List-&gt;(##&amp;)             expand packs
+  /.In-&gt;(#@##2&amp;)                      convert In[f,args...] to f[args...]
+ToString[ % ,                       stringify,
+  CForm                               converting [] to ()
+]
+R[ % ,q-&gt;&quot;&quot;]                        unquote names
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 567 bytes</h1>
