--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240911T071056Z
+"   /golfscore                                      20240911T073707Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/49950.html">Capitalize first letter of each word of input   : 0049950</a>
 <a href="q/93651.html">Expand the variadic expression                  : 0093651</a>
 <a href="q/255650.html">Sum every second digit in a number              : 0255650</a>
 <a href="q/50870.html">Expand an encoded string                        : 0050870</a>
