--- a/q/49950.html
+++ b/q/49950.html
@@ -97,7 +97,7 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 9 bytes</h1>
 <p><code>wmΓo:ax&quot; </code></p>
 <p><a href="https://tio.run/##Hc47bsMwEATQqwzcW02SJmUEpHIVpDdW1IqkRXJtfizR18i9ciWacDnAzMOYktbWNv//J5@0H9BaA4/iPUfFiKLWNEBFetSRPLuREiPlsiwDztlIT7hazRKOWXhGMhwCBasp9N235ViRI1k3OXrYoPH2/oFsbMz1mDfBj2iOA34N41asWjFF2QIW2XEp/tpFuXPsC0YHKmbR3R0dBVXx9epuUtwMQ3fGxBygRBwo4cQ7TqV/7L4Wmc9T5Sc" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
-<p>This is the perfect case to use <code>Γ</code> function, even though this submission is not competing!</p>
+<p>This is the perfect case to use the <code>Γ</code> function, even though this submission is not competing!</p>
 <p>A <a href="https://codegolf.stackexchange.com/a/158229/101276">description of the usage of <code>Γ</code></a> can be found in the thread &quot;Tips for golfing in Husk&quot;. Briefly, <code>Γ</code> can apply two different functions on the list head and its tail. In this given challenge the tail modification has be ignored (only the first letter get capitalized) and so, the construction is following: <code>Γo:a</code>.</p>
 <p>A special care has been taken to preserve the spaces, since splitting and then reassembling a string with <code>w</code> replaces multiple spaces with a single one (as well as it removes the heading and trailing spaces). I have used <code>x</code> with a literal space (note that in the code snippet there is a space after the quotation mark). This way an empty string is produced between each pair of spaces and by a later reassembling of the total string there will be inserted the right number of spaces.</p>
 <p>Otherwise the sumbission is pretty trivial.</p>
