--- a/q/50870.html
+++ b/q/50870.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>Vyxal</td><td>240910T234910Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/275469#275469">emanresu</a></td></tr>
+<tr d-ix="0"><td>013</td><td>Vyxal</td><td>240910T234910Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/275469#275469">emanresu</a></td></tr>
 <tr d-ix="1"><td>175</td><td>Java 7</td><td>161019T093104Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/96718#96718">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>135</td><td>Python 3</td><td>150527T210724Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/50881#50881">Kade</a></td></tr>
 <tr d-ix="3"><td>071</td><td>rs</td><td>150527T193310Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/50874#50874">kirbyfan</a></td></tr>
@@ -41,16 +41,16 @@
 <tr d-ix="12"><td>028</td><td>Pyth</td><td>150527T205518Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/50880#50880">Jakube</a></td></tr>
 <tr d-ix="13"><td>073</td><td>Ruby</td><td>150527T193703Z</td><td><a href="https://codegolf.stackexchange.com/questions/50870/expand-an-encoded-string/50875#50875">Cristian</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 14 bytes</h1>
-<pre><code>`.+?\d`Ẏƛṫ⌊*;∑
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
+<pre><code>`.+?\d`Ẏ⟑ṫ⌊*₴
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiYC4rP1xcZGDhuo7Gm+G5q+KMiio74oiRIiwiIiwiMTNhYTJhMWIxIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<pre><code>       Ẏ       # Find all matches of the regex
-`.+?\d`        # &quot;.+?\d&quot; - as few characters as possible, then a digit
-        ƛ   ;  # Over each match
-         ṫ⌊    # Remove the last character and convert it to an int
-           *   # and repeat the rest of the string by that
-             ∑ # Concatenate the result
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJgLis/XFxkYOG6juKfkeG5q+KMiirigrQiLCIiLCIxM2FhMmExYjEiXQ==" rel="nofollow noreferrer">Try it Online!</a> -1 thanks to lyxal.</p>
+<pre><code>       Ẏ      # Find all matches of the regex
+`.+?\d`       # &quot;.+?\d&quot; - as few characters as possible, then a digit
+        ⟑     # Over each match
+         ṫ⌊   # Remove the last character and convert it to an int
+           *  # and repeat the rest of the string by that
+            ₴ # Print the result
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Java 7, 175 bytes</h1>
